--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ Author URL: http://w3layouts.com
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item2 content mt-md-0 mt-4" data-id="id-2" data-type="cat-item-2">
                     <span class="image-block">
-                        <a href="https://rihdus.github.io/mini-project/>
+                        <a href="https://rihdus.github.io/mini-project/">
                             <div class="content-overlay"></div>
                             <img src="assets/images/blog2.jpg" class="img-fluid w3layouts agileits" alt="portfolio-img">
                             <div class="content-details fadeIn-bottom">
